[package]
name = "sbom-ghr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
ar = "0.9.0"
base16ct = {version="0.1.1", features=["alloc"]}
clap = { version="3.1.18", features=["derive","env"]}
digest = "0.10.3"
flate2 = "1.0.24"
git2 = "0.14.4"
octocrab = "0.16.0"
reqwest = "0.11.10"
sha-1 = "0.10.0"
spdx-rs = "0.5.0"
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.31"
tokio = { version="1.19.2", features=["full"] }
url = "2.2.2"
zip = "0.6.2"

[[bin]]
name="sbom-ghr"
test = false
bench=false
